@@ -35,6 +35,7 @@
 GladeXML *xml_esf  = NULL;
 GtkTextBuffer *buffer= NULL;
 
+void esf_reload(void);
 
 static void esf_render_example(GtkTextBuffer *buffer)
 {
@@ -87,7 +88,10 @@ static void esf_render_example(GtkTextBuffer *buffer)
 	gtk_label_set_text(GTK_LABEL(glade_xml_get_widget(xml_esf, "label_example")), (const char *)result_buffer);
 	mpd_freeSong(song);
 }
-
+void esf_reload(void)
+{
+	esf_render_example(buffer);
+}
 char * edit_song_markup(char *format)
 {
 	char *str_format = NULL;
